<resources>
    <string name="app_name">Workout Planner</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_workouts">Workouts</string>
    <string name="value_unknown">--</string>
    <string name="kilogram_short">kg</string>
    <string name="centimeter_short">cm</string>
    <string name="age_short">y/o</string>
    <string name="gender_short">gender</string>
    <string name="edit_information">Edit information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="about_you">About you</string>
    <string name="today">Today</string>
    <string name="exercise">Exercise</string>
    <string name="add_exercise">Add exercise</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="delete_all">Delete all</string>
    <string name="edit_exercise_menu">Edit exercise menu</string>
    <string name="edit_exercise">Edit exercise</string>
</resources>