<?xml version="1.0" encoding="utf-8"?>
<se.umu.oi17wln.workoutplanner.ui.CustomLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_editpersoninfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <!-- Height input field -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorBackgroundDark"
        app:cardCornerRadius="0dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/height"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@null"
                app:boxStrokeColor="@color/colorAccentPrimary"
                app:hintTextColor="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/weight"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@null"
                app:boxStrokeColor="@color/colorAccentPrimary"
                app:hintTextColor="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789."
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background_accent"
                android:backgroundTint="@color/colorAccentPrimary"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/date_of_birth"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="1000dp" />

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_background"
                    android:button="@null"
                    android:checked="true"
                    android:elevation="2dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/male"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_btn_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/checkbox_background"
                    android:button="@null"
                    android:elevation="2dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/female"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackgroundDark"
                    android:textSize="18sp" />

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</se.umu.oi17wln.workoutplanner.ui.CustomLinearLayout>