<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_editpersoninfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/exercise"
                app:boxStrokeColor="@color/colorAccentPrimary"
                app:errorTextColor="@color/colorAccentRed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_exercise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="50" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/sets"
                app:boxStrokeColor="@color/colorAccentPrimary"
                app:errorTextColor="@color/colorAccentRed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_sets"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/reps"
                app:boxStrokeColor="@color/colorAccentPrimary"
                app:errorTextColor="@color/colorAccentRed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_reps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="3" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>